# mypy_exclude

./: pyproject.toml
libs/lib1/: lib1.py
main/: main.py
