[tool.poetry]
name = "mypy-doesnot-work"
version = "0.1.0"
description = ""
authors = ["Artsiom Kaltovich"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
mypy = "^1.13.0"

[tool.mypy]
exclude = "libs"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
